Tag limit now works. The field will be removed until the tag amount is less than the tag limit. We should probably also make sure that the amount of tags is "cut" when submitting

--- a/jquery/style.css
+++ b/jquery/style.css
@@ -1,16 +1,15 @@
+/*
 .highlighted {
-            background-color:Red;
-        }
+    background-color:Red;
+}
+*/
 
-        #testDiv, #insertHere{
-            display: flex;
-        }
-        .tag{
-            background-color: #CFD3FF;
-            border-radius: 5px;
-            padding: 5px;
-        }
-        .tagDeleteButton{
-            background-color: #AFB5ED;
-            border: none;
-        }
+.tag{
+    background-color: #CFD3FF;
+    border-radius: 5px;
+    padding: 5px;
+}
+.tagDeleteButton{
+    background-color: #AFB5ED;
+    border: none;
+}
