--- a/styles/myTagStyle.css
+++ b/styles/myTagStyle.css
@@ -12,6 +12,7 @@
     font-weight: bold; 
     background-color:burlywood;
     border-radius: 2px;
+    color:dimgrey;
     text-decoration: underline;
 }
 
